# poli

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  Dockerfile.test  LICENSE  README.MD  config.rc  environment.yml  objective.py  objective_factory.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  tox.dev.ini  tox.ini  tox.master.ini
.github/workflows/: python-tox-testing-base.yml  python-tox-testing-dockstring-env.yml  python-tox-testing-ehrlich-holo-env.yml  python-tox-testing-including-conda-on-master.yml  python-tox-testing-including-conda.yml  python-tox-testing-lambo-env.yml  python-tox-testing-protein-env.yml  python-tox-testing-rasp-env.yml  python-tox-testing-rmf-env.yml  python-tox-testing-rosetta-env.yml  python-tox-testing-tdc-env.yml
core/: AbstractBlackBox.py  AbstractProblemFactory.py  problem_setup_information.py  registry.py
core/util/: abstract_logger.py  abstract_observer.py
docs/source/: conf.py  index.rst
docs/source/_templates/: custom-class-template.rst  custom-module-template.rst
docs/source/_templates/autosummary/: custom-class-template.rst  custom-module-template.rst
examples/: adding_an_objective_function.py  config.rc  installing_aloha_from_repository.py  minimal_working_example.py
examples/a_simple_objective_function_registration/: environment.yml  querying_aloha.py  registering_aloha.py
examples/adding_an_mlflow_observer/: example_logging_rdkit_logp.py  mlflow_observer.py
examples/adding_an_objective_function/: __init__.py  adding_an_objective_function.py  my_objective_function.py  my_objective_function.sh
examples/adding_an_observer/: adding_an_observer.py  my_observer.py  my_observer.sh
examples/adding_foldx_stability_as_objective_function/: environment.yml  foldx_stability_objective_function.py  foldx_utils.py  querying_foldx_stability.py  readme.md  registering_foldx_stability.py
examples/adding_smb_as_objective_function/: environment.yml  model.py  smb_objective_function.py
examples/an_entire_benchmark/: running_pmo_benchmark.py
examples/comparing_rasp_and_foldx/: simple_rasp_foldx_comparison.py
examples/evaluating_stability_and_sasa_in_parallel/: parallel_query.py
examples/observers/adding_a_wandb_observer/: example_logging_rdkit_qed_using_wandb.py  wandb_observer.py
examples/observers/adding_an_mlflow_observer/: example_logging_rdkit_logp_using_mlflow.py  mlflow_observer.py
examples/observers/adding_an_observer/: my_observer.py
examples/observers/registering_an_observer/: 00_registering_an_observer.py  01_calling_a_registered_observer.py  02_discouraged_use.py  print_observer.py  wandb_observer.py
examples/protein_stability_and_sasa/comparing_rasp_and_foldx/: simple_rasp_foldx_comparison.py
examples/protein_stability_and_sasa/evaluating_stability_and_sasa_in_parallel/: parallel_query.py
examples/protein_stability_and_sasa/running_foldx/: running_foldx.py
examples/protein_stability_and_sasa/saturation_mutagenesis_for_two_proteins_using_rasp/: saturation_mutagenesis_at_first_position.py
examples/querying_qed_and_logp_of_selfies/: querying_qed_and_logp.py
examples/querying_qed_of_selfies/: alphabet_selfies.json  querying_qed.py
examples/registering_an_observer/: 00_registering_an_observer.py  01_calling_a_registered_observer.py  wandb_observer.py
examples/running_lambos_objective_function/: example.py
examples/saturation_mutagenesis_for_two_proteins_using_rasp/: saturation_mutagenesis_at_first_position.py
examples/small_molecules/querying_qed_and_logp_of_selfies/: alphabet_selfies.json  querying_qed_and_logp.py
examples/small_molecules/using_dockstring/: querying_dockstring_black_box.py
examples/the_basics/: minimal_example_on_toy_continuous.py
examples/the_basics/a_simple_objective_function_registration/: environment.yml  querying_aloha.py  registering_aloha.py
examples/using_rasp/: querying_rasp.py
logger/: dummy_logger.py
logger/observers/: basic_observer.py  rudimentary_observer.py
logger/wandb/: wandb_logger.py
objective_run_scripts/: foldx_gfp.sh  gfp.sh  white_noise.sh
objectives/common/lambo/: candidate.py  proxy_rfp.py  utils.py
objectives/lambo_foldx/: abstract_foldx_factory.py  cached_foldx_values.npy  foldx_gfp.sh  foldx_gfp_factory.py
objectives/lambo_sasa/: lambo_sasa_gfp_factory.py  sasa.py
objectives/white_noise/: __init__.py  white_noise.sh  white_noise_factory.py
src/: __init__.py
src/poli/: __init__.py  external_black_box_script.py  external_isolated_function_script.py  external_problem_factory_script.py  objective.py  objective_factory.py  repository.py
src/poli/benchmarks/: __init__.py  guacamol.py  pmo.py  toy_continuous_functions_benchmark.py
src/poli/core/: AbstractBlackBox.py  AbstractProblemFactory.py  __init__.py  abstract_benchmark.py  abstract_black_box.py  abstract_isolated_function.py  abstract_problem.py  abstract_problem_factory.py  benchmark_information.py  black_box_information.py  data_package.py  exceptions.py  lambda_black_box.py  multi_objective_black_box.py  problem.py  problem_setup_information.py  registry.py
src/poli/core/chemistry/: __init__.py  environment.yml  tdc_black_box.py  tdc_isolated_function.py  tdc_problem.py
src/poli/core/proteins/: __init__.py  foldx_black_box.py  foldx_isolated_function.py
src/poli/core/util/: __init__.py  abstract_logger.py  abstract_observer.py  algorithm_observer_wrapper.py  default_observer.py  external_observer.py  ipc.py  multi_observer.py  observer_wrapper.py
src/poli/logger/: dummy_logger.py
src/poli/logger/observers/: basic_observer.py  rudimentary_observer.py
src/poli/logger/wandb/: wandb_logger.py
src/poli/objective_repository/: __init__.py
src/poli/objective_repository/albuterol_similarity/: information.py  register.py
src/poli/objective_repository/aloha/: __init__.py  (+2 more)
src/poli/objective_run_scripts/: foldx_gfp.sh  white_noise.sh
src/poli/tests/: __init__.py  conftest.py  test_core_promises.py  test_lambda_black_box.py  test_minimal_working_example.py  test_sa_tdc_registration_on_readme.py  test_seeding.py
(+276 files in other folders)
