[build-system]
requires = ["setuptools<=68"]
build-backend = "setuptools.build_meta"

[project]
name = "poli"
version = "0.0.1"
dependencies = [
    "numpy",
    "rdkit",
    "selfies",
    "dockstring"
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]