[build-system]
requires = ["setuptools<=68"]
build-backend = "setuptools.build_meta"

[project]
name = "poli"
version = "0.2.1"
description = "poli, a library of discrete objective functions"
readme = "README.md"
authors = [{name="Miguel González-Duque", email="miguelgondu@gmail.com"}, {name="Simon Bartels"}]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["optimization", "molecular", "discrete", "proteins"]
dependencies = [
    "numpy<2",
    "rdkit",
    "selfies"
]

[project.optional-dependencies]
dev = ["black", "tox", "pytest"]
docs = ["sphinx", "furo"]

[project.urls]
Homepage = "https://github.com/MachineLearningLifeScience/poli"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "poli__lambo: marks tests that run in the poli__lambo environment",
    "poli__dockstring: marks tests that run in the poli__dockstring environment",
    "poli__tdc: marks tests that run in the poli__tdc environment",
    "poli__protein: marks tests that run in the poli__protein environment",
    "poli__rasp: marks tests that run in the poli__rasp environment",
    "unmarked: All unmarked tests",
]