[metadata]
name = poli
version = 0.1.0
author_email = bartels@di.ku.dk
description = Protein Objectives Library
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.6
include_package_data = True

[options.packages.find]
where=src

[options.package_data]
* = *.sht, *.yml, *.jar, *.pt, *.json, *.pdb, *.npz, *.npy, *.h5, *.fa, *.csv
