[metadata]
name = poli
version = "1.0.0.dev11"
author = Miguel González-Duque
author_email = miguel.gonzalez-duque@bio.ku.dk
description = A library of discrete objective functions
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.9
include_package_data = True

[options.packages.find]
where=src

[options.package_data]
* = *.sht, *.yml, *.jar, *.pt, *.json, *.pdb, *.npz, *.npy, *.h5, *.fa, *.csv, *.txt
